MGP v 1.12.0 2/3/25
-------------------
  * fixed issue with incorrect DSA calling for class II 
  * changed DSA evaluation to evaluate all alleles 
  * DSAs along with MFIs now appear in the UI if there are DSAs
  * added DP comparison code in getTCE to evaluate same p-groups
  * added code to take into account abs that are called differently if called asp
  * code refactoring to avoid redundancy in executeMGP
  * removed NMDP reference file checks
  
MGP v 1.11.0 1/5/25
-------------------
  * Changed logic for NMDP code conversion - removed NMDP reference file and use MAC API instead
  * Added logic to add A*02:03 to called antibodies during DSA assessment if 
  A203 is in called antibodies, since it's called differently than A2
  * Bug fixes
    -filtered out Bw4 and Bw6 from antibody calling results so the actual AG 
    is used if surrogacy is needed
  * Updated R version to 4.4.2
  * Updated packages + lockfile
  
MGP v 1.10.0 11/8/24
-------------------
  * Bug fixes
    -corrected issue w. DRB345 not showing up in mismatches
    -fixed DSA issue with NULL variants; hvg_mm_allele was used instead of 
    recip_null_allele when subbing out the last character of the NULL variant
    -used %in% instead of == w/ comparing mismatched alleles and same p-group
    in cases where the mismatched allele has the same p-group as multiple alleles
    -redid logic for handling NULL variants and alleles with the same p-group - see workflow for more details
    -corrected issue with grepl(mm_locus), where NMDP alleles with the same letter as the locus would cause issues
  * Added logic for cases where DP alleles have the same p-group, leading to no 
  mismatches - TCE in these cases should be M
  *Updated NMDP reference file
    
MGP v 1.9.1 11/4/24
-------------------
  * Bug fixes - fixed order of loci MM display and added trimmed_allele 
  to calcDPDQ when evaluating GvH mismatches - it was missed before, causing