@@ -1,6 +1,6 @@
 #ui
 #by: Livia Tran
-#v 1.11.0
+#v 1.12.1
 
 suppressPackageStartupMessages(library(shiny))
 suppressPackageStartupMessages(library(shinythemes))
@@ -10,7 +10,7 @@ suppressPackageStartupMessages(library(shinybusy))
 
 source('functions/executeMGP.R')
 
-ui <- navbarPage(title = div('Match Grade Populator (MGP) v 1.12.0', collapsible = FALSE, img(src = "sbc_logo.png", height = "45px",width = "100px",style = "position: fixed; right: 10px; top: 5px;")),theme = shinytheme('cosmo'),
+ui <- navbarPage(title = div('Match Grade Populator (MGP) v 1.12.1', collapsible = FALSE, img(src = "sbc_logo.png", height = "45px",width = "100px",style = "position: fixed; right: 10px; top: 5px;")),theme = shinytheme('cosmo'),
                  
                  #main tab 
                  tabPanel("Main",
